--- a/String/tripleIgual.html
+++ b/String/tripleIgual.html
@@ -12,7 +12,7 @@
 
     <script>
 
-        /* let answerQuestion = function () {
+        let answerQuestion = function () {
             let answer = prompt("What is 4 + 4");
             //Al poner triple igual
             if (answer === "8") {
@@ -25,21 +25,10 @@
         while (answer != true) {
             answer = answerQuestion();
         }
-        alert("Correct Answer!"); */
+        alert("Correct Answer!");
 
-        //2º FORMA DE HACER LAS FUNCIONES, ESTILO LAMBDA
-        //SI MI FUNCIÓN TIENE VARIAS INSTRUCCIONES, SE HACE ASÍ
-        let sum = (a, b) => {
+       
 
-            console.log("oper1", a);
-            console.log("oper2", b);
-            return a +b;
-
-        }
-
-        //SI MI FUNCIÓN ES SIMPLE Y SOLO DEVUELVE UNA COSA, ES ASÍ
-        let sum2 = (a, b) => a+b;
-        console.log(sum2(12, 55));
 
     </script>
 
